@@ -2,6 +2,7 @@
 * Reenable Async SSL by default.
 * Add an explicit `ctx` content to track every conduit's runtime state.
 * Allow the source interface for a conduit to be set.
+* Support a `password` callback for the SSL layer (#4).
 
 0.5.0 (2014-04-13):
 * First public release.
